passos/exposta/01-aplicacao.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: echo-exposta
  annotations: {rhcl.demo/autor: Sandro Tanaka}
spec:
  replicas: 1
  selector:
    matchLabels: {app: echo}
  template:
    metadata:
      labels: {app: echo}
    spec:
      containers:
        - name: echo
          image: registry.access.redhat.com/ubi9/httpd-24:latest
          ports:
            - {name: http, containerPort: 8080}
          volumeMounts:
            - {name: conteudo, mountPath: /var/www/html}
          resources:
            requests: {cpu: 50m, memory: 64Mi}
            limits: {cpu: 200m, memory: 256Mi}
      volumes:
        - name: conteudo
          configMap: {name: echo-conteudo}
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: echo-exposta
  annotations: {rhcl.demo/autor: Sandro Tanaka}
spec:
  selector: {app: echo}
  ports:
    - {name: http, port: 8000, targetPort: 8080}
